--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -53,7 +53,18 @@ li a{
 
 }
 
-
+.cont2{
+  color: #003b9b;
+  font-size: 20px;
+   font-family: 'Montserrat',sans-serif;
+  font-style: normal;
+  font-weight: bolder;
+}
+.conbo {
+  background-repeat: no-repeat;
+background-size:  cover;
+}
+ 
 
 
 body{
