--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -25,7 +25,7 @@
 .medio {color: white;
   padding-right:8px;
   font-size: 1.125rem;
-    font-family: 'Montserrat',sans-serif;
+    font-family: 'Montserrat' ;
     font-style: normal;
     font-weight: bolder;margin-bottom: 0;
 }
@@ -83,7 +83,7 @@ background-size:  cover;
 }
 html, body {
   min-height: 400px;
-height: 100%; 
+height: 100%;
 
 margin: 0;
 padding: 0;
