--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -7,6 +7,20 @@
   color: rgba(0, 0, 0, 0.62);
 
 }
+
+footer .semiTit{
+  font-size: 0.9rem;
+   font-family: 'Montserrat',sans-serif;
+  font-style: normal;
+  font-weight: bolder;
+  color: white;
+ 
+
+}
+
+
+
+
 .bordes{
   border-style: solid;
   border-width: 1px;
