--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -113,3 +113,16 @@ padding: 0;
 min-height: 100%;
 height: 100%; /*Solo para IE6*/
 }
+.navbar-nav .dropdown-menu {
+  background-color: rgba(255, 255, 255, 0.80);
+}
+
+@media  (max-width:975px) {
+  .fondoNav {
+    background-color: rgba(0, 0, 0, 0.62);
+    padding: 5px;
+    z-index: 2;
+  }
+
+
+}
