--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -143,12 +143,36 @@ height: 100%; /*Solo para IE6*/
   background-color: rgba(255, 255, 255, 0.80);
 }
 
+.cel{
+padding-left: 8rem !important;padding-right:8rem !important;
+}
+
+
+
+
+
+
 @media  (max-width:975px) {
   .fondoNav {
     background-color: rgba(0, 0, 0, 0.62);
     padding: 5px;
     z-index: 2;
   }
+  .cel{
+  padding-left: 1rem !important;padding-right:1rem !important;
+  }
+
+
+ .semiTit{
+   padding-left: 0;
+ }
+
+
+
+
+
+
+
 
 
 }
